tests/expectations/compiler/finalize/shadow_mapping_fail.out
Error [EAST0372017]: The name `bar` is defined multiple times.
    --> compiler-test:19:12
     |
   4 |       mapping bar: u8 => u8;
     |       ^^^^^^^^^^^^^^^^^^^^^^ previous definition of `bar` here
   ...
  19 |       struct bar {
     |              ^^^ `bar` redefined here
Error [EAST0372017]: The name `bar` is defined multiple times.
    --> compiler-test:6:16
     |
   4 |       mapping bar: u8 => u8;
     |       ^^^^^^^^^^^^^^^^^^^^^^ previous definition of `bar` here
   5 |
   6 |       transition bar(a: u8) -> u8 {
     |                  ^^^ `bar` redefined here
